--- a/CreateToken/CreateToken.csproj
+++ b/CreateToken/CreateToken.csproj
@@ -7,6 +7,8 @@
 
   <ItemGroup>
     <PackageReference Include="AlipaySDKNet.Standard" Version="4.5.18" />
+    <PackageReference Include="Microsoft.AspNetCore.Http" Version="2.2.2" />
+    <PackageReference Include="Microsoft.Extensions.Hosting" Version="5.0.0" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
   </ItemGroup>
 
