--- a/ProIdentityServer4/ProIdentityServer4.csproj
+++ b/ProIdentityServer4/ProIdentityServer4.csproj
@@ -8,4 +8,8 @@
     <PackageReference Include="IdentityServer4" Version="4.1.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\ProIdentityServerAPI\ProIdentityServerAPI.csproj" />
+  </ItemGroup>
+
 </Project>
