--- a/.gitignore
+++ b/.gitignore
@@ -338,3 +338,6 @@ ASALocalRun/
 
 # BeatPulse healthcheck temp database
 healthchecksdb
+/ProHubData/EF.Reverse.POCO.v3.ttinclude
+/ProHubData/Database1.tt
+/ProHubData/Database1.cs
