--- a/AspNetCoreRateLimit/CoreRateLimit.csproj
+++ b/AspNetCoreRateLimit/CoreRateLimit.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="AspNetCoreRateLimit" Version="3.0.0" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
   </ItemGroup>
 
 
