--- a/FluentValidationDemo/FluentValidationDemo.csproj
+++ b/FluentValidationDemo/FluentValidationDemo.csproj
@@ -7,10 +7,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="FastEndpoints" Version="5.20.1" />
-    <PackageReference Include="FastEndpoints.Security" Version="5.20.1" />
-    <PackageReference Include="FastEndpoints.Swagger" Version="5.20.1" />
-    <PackageReference Include="FastEndpoints.Swagger.Swashbuckle" Version="2.2.0" />
+    <PackageReference Include="FluentValidation" Version="11.9.0" />
+    <PackageReference Include="FluentValidation.AspNetCore" Version="11.3.0" />
+    <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="11.9.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
   </ItemGroup>
 
