--- a/OnionWebAPI/OnionWebAPI.csproj
+++ b/OnionWebAPI/OnionWebAPI.csproj
@@ -13,8 +13,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Persistence\Persistence.csproj" />
-    <ProjectReference Include="..\Services.Abstractions\Services.Abstractions.csproj" />
+    <ProjectReference Include="..\Persistence\Infrastructure.csproj" />
+
     <ProjectReference Include="..\Services\Services.csproj" />
   </ItemGroup>
 
