--- a/RepositoryPattern.WebAPI/appsettings.json
+++ b/RepositoryPattern.WebAPI/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "mysqlconnection": {
-    "connectionString": "server=localhost;userid=root;password=yourpass;database=accountowner;"
+    "connectionString": "Server=localhost;Port=3306;Database=dev_cdesign2;Uid=root;Pwd=root123456;"
   },
   "AllowedHosts": "*"
 }
