--- a/继承抽象/继承抽象.csproj
+++ b/继承抽象/继承抽象.csproj
@@ -7,4 +7,10 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Azure.Core" Version="1.35.0" />
+    <PackageReference Include="netDxf" Version="2022.11.2" />
+    <PackageReference Include="Zack.EFCore.Batch_NET6" Version="6.1.9" />
+  </ItemGroup>
+
 </Project>
