--- a/BasicSolution/AutoScanPlugins/AutoScanPlugins.csproj
+++ b/BasicSolution/AutoScanPlugins/AutoScanPlugins.csproj
@@ -5,14 +5,12 @@
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
-    <Authors>ProzkbName</Authors>
-    <Company>ProzkbCompany</Company>
-    <Product>ProzkbProduct</Product>
+    <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
+    <DockerfileContext>..\..</DockerfileContext>
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Pictures\" />
-    <Folder Include="OrigalPics\" />
+    <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.21.0" />
   </ItemGroup>
 
 </Project>
