--- a/AspNetCoreRateLimit/CoreRateLimit.csproj
+++ b/AspNetCoreRateLimit/CoreRateLimit.csproj
@@ -6,6 +6,8 @@
 
   <ItemGroup>
     <PackageReference Include="AspNetCoreRateLimit" Version="3.0.0" />
+    <PackageReference Include="Azure.Identity" Version="1.13.0" />
+    <PackageReference Include="Microsoft.ApplicationInsights.AspNetCore" Version="2.22.0" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
   </ItemGroup>
 
