新增一个项目：Knife4jUI

--- a/NETAspire/FirstNETAspireSln/AspireApp1/AspireApp1.AppHost/AspireApp1.AppHost.csproj
+++ b/NETAspire/FirstNETAspireSln/AspireApp1/AspireApp1.AppHost/AspireApp1.AppHost.csproj
@@ -12,6 +12,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\..\..\BasicSolution\DotNetify-Pulse\DotNetify-Pulse.csproj" />
+    <ProjectReference Include="..\..\..\..\BasicSolution\Knife4jSln\Knife4jSln.csproj" />
     <ProjectReference Include="..\..\..\..\BasicSolution\SSEDemo\SSEDemoSln\SSEDemoSln.csproj" />
     <ProjectReference Include="..\..\..\..\BasicSolution\SSEDemo\SSEDemoSln\SSEDemoSln\SSEDemoSln.csproj" />
     <ProjectReference Include="..\..\..\..\BasicSolution\WatchDogDemo\WatchDogSlns\WatchDogSlns\WatchDogSlns.csproj" />
