Scalar2Sln_XXX 项目跑通

--- a/BasicSolution/Scalar2Sln/appsettings.Development.json
+++ b/BasicSolution/Scalar2Sln/appsettings.Development.json
@@ -1,4 +1,9 @@
 {
+  "ConnectionStrings": {
+    "CleanArchitectureSolutionTemplateDb": "Server=(localdb)\\mssqllocaldb;Database=CleanArchitectureSolutionTemplateDb109;Trusted_Connection=True;MultipleActiveResultSets=true"
+    //"CleanArchitectureSolutionTemplateDb": "Data Source=app.db"
+
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
