--- a/BasicSolution/Scalar2Sln/Scalar2Sln.csproj
+++ b/BasicSolution/Scalar2Sln/Scalar2Sln.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net9.0</TargetFramework>
@@ -13,6 +13,8 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\NETAspire\FirstNETAspireSln\AspireApp1\AspireApp1.ServiceDefaults\AspireApp1.ServiceDefaults.csproj" />
+    <ProjectReference Include="..\Scalar2Sln_Application\Scalar2Sln_Application.csproj" />
+    <ProjectReference Include="..\Scalar2Sln_Infrastructure\Scalar2Sln_Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
