--- a/BasicSolution/Scalar2Sln/Scalar2Sln.csproj
+++ b/BasicSolution/Scalar2Sln/Scalar2Sln.csproj
@@ -17,4 +17,9 @@
     <ProjectReference Include="..\Scalar2Sln_Infrastructure\Scalar2Sln_Infrastructure.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Controllers\Authentications\" />
+    <Folder Include="Controllers\Authorizes\" />
+  </ItemGroup>
+
 </Project>
